2005-07-13  Andrew Haley  <aph@redhat.com>

	* gnu/java/net/protocol/file/Connection.java (unquote): New
	method.
	(connect): Unquote filename.
	gnu/java/net/protocol/jar/Connection.java (getInputStream):
	Likewise.  
	(getJarFile): Likewise.

	* java/net/URLConnection.java (getContentHandler): Guard cast with
	instaceof.

	* java/net/URL.java (URL): If the file part of a spec is absolute,
	ignore the file part of its context.

2005-07-08  Colin Walters  <walters@verbum.org>

	* verify.cc (class _Jv_BytecodeVerifier) <op_new>: Don't
	check for abstract classes or interfaces here; JVM spec
	says it should throw an exception, so we'll do so later.
	* interpret.cc (run): Throw an InstantiationException for
	abstract classes and interfaces.

2005-07-08  Andrew Haley  <aph@redhat.com>

	* posix-threads.cc (_Jv_ThreadSetPriority): Use SCHED_OTHER
	(regular, non-realtime scheduling), not SCHED_RR (realtime,
	round-robin).

2005-07-07  Release Manager

	* GCC 4.0.1 released.

2005-06-05  Anthony Green  <green@redhat.com>

	* gnu/java/net/natPlainSocketImplPosix.cc (setOption): Fix case
	fall-through bug.

2005-06-04  Anthony Green  <green@redhat.com>

	* java/net/URLClassLoader.java: import gnu.gcj.Core,
	and gnu.java.net.protocol.core.CoreInputStream.
	(CureURLLoader): New class.
	(CoreResource): New class.
	(addURLImpl): Add special treatment for the "core" protocol.
	* gnu/gcj/natCore.cc (find): New method.
	* gnu/gcj/Core.java (find): New method.
	
2005-06-04  Andreas Tobler  <a.tobler@schweiz.ch>

	* jawt.c: Remove malloc.h include and use stdlib.h instead.

2005-06-01  Tom Tromey  <tromey@redhat.com>

	PR libgcj/21753:
	* java/lang/natString.cc (substring): Changed sharing heuristic.

2005-05-29  Michael Koch  <konqueror@gmx.de>

	PR libgcj/20273:
	* java/util/LinkedHashMap.java (access): Set 'root.pred'.

2005-05-27  Robin Green  <greenrd@greenrd.org>

	PR libgcj/21775:
	* java/util/logging/natLogger.cc (getCallerStackFrame): Start
	with i=1.
